--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -2,19 +2,19 @@
 
 @mixin button($bg-color, $text-color){
   display: block;
-  width: 250px;
-  height: 55px;
+  width: 308px;
+  height: 66px;
   border-radius: 5px;
   background-color: $bg-color;
   color: $text-color;
-  font-size: 20px;
+  font-size: 22px;
   font-family: Roboto, sans-serif;
   font-weight: bold;
 }
 
 @mixin link-button($color){
   font-size: 16px;
-  font-family: Roboto;
+  font-family: Roboto, sans-serif;
   font-weight: bold;
   color: $color;
 }
